--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "HelloWorld2"
+rootProject.name = "tp_03_xml_ui_events"
 include ':app'
